chore(*): Prevent important elements from collapsing
* `.page`s no longer allow horizontal overflow
* `<header>`s will no longer shrink in flex layouts
* `<menu>`s will no longer shrink in flex layouts

--- a/scss/core/_header.scss
+++ b/scss/core/_header.scss
@@ -1,5 +1,15 @@
 header {
   align-items: baseline;
   display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
   justify-content: space-between;
+
+  menu[type=toolbar] {
+    padding: 0;
+
+    button {
+      padding: 0 2rem;
+    }
+  }
 }
