--- a/scss/core/_menu.scss
+++ b/scss/core/_menu.scss
@@ -1,4 +1,5 @@
 menu[type=toolbar] {
   display: flex;
+  flex-shrink: 0;
   padding: 2rem;
 }
